force-app/main/default/objects/TableauUser__c/TableauUser__c.object-meta.xml
<CustomObject>
    <description>Object contains list of users who have access to tableau</description>
    <label>Tableau User</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Tableau User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tableau Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>