force-app/main/default/objects/TableauUser__c/fields/IfSFDCUser__c.field-meta.xml
<CustomField>
    <fullName>IfSFDCUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If SFDC User</label>
    <type>Checkbox</type>
</CustomField>