force-app/main/default/objects/TableauUser__c/fields/InteractorPublisher__c.field-meta.xml
<CustomField>
    <fullName>InteractorPublisher__c</fullName>
    <label>Interactor/Publisher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interactor</fullName>
            </value>
            <value>
                <fullName>Publisher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>