force-app/main/default/objects/TableauUser__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If User is active in Tableau and have access to workbooks</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>