force-app/main/default/objects/TableauUser__c/fields/OwnershipAccess__c.field-meta.xml
<CustomField>
    <fullName>OwnershipAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OwnershipAccess</label>
    <type>Checkbox</type>
</CustomField>