force-app/main/default/objects/TableauUser__c/fields/RoleID__c.field-meta.xml
<CustomField>
    <fullName>RoleID__c</fullName>
    <formula>TableauRLSQuery__r.RoleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role ID</label>
    <type>Text</type>
</CustomField>