force-app/main/default/objects/TableauUser__c/fields/RoleLevelAccess__c.field-meta.xml
<CustomField>
    <fullName>RoleLevelAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RoleLevelAccess</label>
    <type>Checkbox</type>
</CustomField>