force-app/main/default/objects/TableauUser__c/fields/SalesOrgAccess__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SalesOrg Access</label>
    <type>Checkbox</type>
</CustomField>