force-app/main/default/objects/TableauUser__c/fields/TRole1__c.field-meta.xml
<CustomField>
    <fullName>TRole1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T_Role1</label>
    <referenceTo>Tableau__c</referenceTo>
    <relationshipLabel>Tableau Users (T_Role1)</relationshipLabel>
    <relationshipName>Tableau_Users1</relationshipName>
    <type>Lookup</type>
</CustomField>