force-app/main/default/objects/TableauUser__c/fields/TRole1UserName__c.field-meta.xml
<CustomField>
    <fullName>TRole1UserName__c</fullName>
    <formula>TRole1__r.RoleName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T_Role1_UserName</label>
    <type>Text</type>
</CustomField>