force-app/main/default/objects/TableauUser__c/fields/TRole2__c.field-meta.xml
<CustomField>
    <fullName>TRole2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T_Role2</label>
    <referenceTo>Tableau__c</referenceTo>
    <relationshipLabel>Tableau Users (T_Role2)</relationshipLabel>
    <relationshipName>Tableau_Users2</relationshipName>
    <type>Lookup</type>
</CustomField>