force-app/main/default/objects/TableauUser__c/fields/TRole3__c.field-meta.xml
<CustomField>
    <fullName>TRole3__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>T_Role3</label>
    <referenceTo>Tableau__c</referenceTo>
    <relationshipLabel>Tableau Users (T_Role3)</relationshipLabel>
    <relationshipName>Tableau_Users3</relationshipName>
    <type>Lookup</type>
</CustomField>