force-app/main/default/objects/TableauUser__c/fields/User18digitID__c.field-meta.xml
<CustomField>
    <fullName>User18digitID__c</fullName>
    <label>User 18 digit ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>