force-app/main/default/objects/TableauUser__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <description>Name of Tableau User</description>
    <label>User Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>