force-app/main/default/objects/TableauUser__c/fields/UserQlookID__c.field-meta.xml
<CustomField>
    <fullName>UserQlookID__c</fullName>
    <label>User Qlook ID</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>